--- a/styles.css
+++ b/styles.css
@@ -4,19 +4,19 @@ body{
 }
 /* navigation styling */
 #topNav{
-    /* position:absolute; */
-    /* position:sticky; */
+    position:sticky;
     top:0;
     width:100%;
-    height:7%;
+    height:40px;
     border-top: solid rgb(0,153,102) 8px;
+    background-color: white;
 }
 #topNav ul{
     display:flex;
-    width:50%;
+    width:60%;
     justify-content: flex-end;
     margin-top:4%;
-    margin-left:35%;
+    margin-left:auto;
 }
 #topNav li{
     list-style: none;
@@ -37,16 +37,13 @@ a{
     font-weight: 400;
 }
 
-#link1{
-    color:rgb(0,153,102);
-    font-weight:600;
-}
+
 /* Header styling */
 #picture{
     display:block;
     width:200px;
     border-radius: 50%;
-    margin-top:25px;
+    margin-top:20px;
     margin-left:auto;
     margin-right:auto;
     box-shadow: 0 0 5px gray;
@@ -163,6 +160,8 @@ h3{
     padding-top:10px;
 }
 
+/* footer styling */
+
 footer{
     border-bottom: solid rgb(0,153,102) 20px;
 }
@@ -176,17 +175,19 @@ footer ul{
     display:flex;
     flex-wrap: wrap;
     width:60%;
-    padding-left:15px;
-    justify-content: space-between;
-    align-items:flex-end;
+    padding-left:25px;
+    align-items:flex-start;
+    margin-bottom:25px;
 }
 
 #botmNav li{
     flex:1;
+    width:45px;
+    margin-bottom:15px;
 }
 
 .colm2{
-    padding-left:15%;
+    margin-left:50px;
 }
 
 #botmNav a{
@@ -196,12 +197,11 @@ footer ul{
 
 #upIcon{
     position:absolute;
-    padding-left:73%;
-
+    right:25px;
 }
 
 #upIcon{
-    font-size: 50px;
+    font-size: 60px;
     color: rgb(0,153,102);
 }
 
