--- a/projects/projectStyles.css
+++ b/projects/projectStyles.css
@@ -22,6 +22,7 @@ body {
 .PPgalleryOption p {
   writing-mode: sideways-lr;
   font-size: 12px;
+  font-weight:600;
   padding-bottom: 5px;
 }
 .PPgalleryMode {
@@ -33,13 +34,20 @@ body {
   transition: width 0.5s, height 0.5s;
 }
 
-.PPgalleryMode:hover {
+.PPgalleryMode:hover{
   width: 45px;
   height: 45px;
+  background-color: #ea1f6386;
 }
-
 #galleryButton1 {
   color: white;
+}
+
+.galleryModeButton{
+  object-fit: cover;
+  width:27px;
+  height:auto;
+  margin:0px 0px 2px 4px;
 }
 
 .galleryViewTextHide {
@@ -144,11 +152,12 @@ body {
 }
 
 /* || Header Styles || */
-
+.PPimageButtonContainer{
+  width:65vw;
+}
 .PPgalleryImages {
-  width: 100%;
-  height: 200px;
-  max-height: 230px;
+  width:100%;
+  height:210px;
   object-fit: cover;
   margin: 20px 10px 20px 0px;
 }
@@ -202,6 +211,10 @@ h3 {
 p {
   font-size: 15px;
   line-height: 23px;
+}
+
+#processText{
+  width:65vw;
 }
 
 /* || Next Project Styles || */
