--- a/projects/projectStyles.css
+++ b/projects/projectStyles.css
@@ -2,6 +2,7 @@ body {
   min-width: 310px;
   overflow-x: hidden;
 }
+
 #content {
   margin: 0px 0px 0px 85px;
 }
@@ -9,10 +10,12 @@ body {
 #navContainer {
   margin-top: 20px;
 }
+
 /* || Gallery Mode Button|| */
 .PPimageButtonContainer {
   position: relative;
 }
+
 .PPgalleryOption {
   position: absolute;
   right: 0px;
@@ -23,9 +26,10 @@ body {
 .PPgalleryOption p {
   writing-mode: sideways-lr;
   font-size: 12px;
-  font-weight:600;
+  font-weight: 600;
   padding-bottom: 5px;
 }
+
 .PPgalleryMode {
   background-color: rgba(0, 0, 0, 0.557);
   width: 40px;
@@ -35,20 +39,21 @@ body {
   transition: width 0.5s, height 0.5s;
 }
 
-.PPgalleryMode:hover{
+.PPgalleryMode:hover {
   width: 45px;
   height: 45px;
   background-color: #ea1f6386;
 }
+
 #galleryButton1 {
   color: white;
 }
 
-.galleryModeButton{
+.galleryModeButton {
   object-fit: cover;
-  width:27px;
-  height:auto;
-  margin:0px 0px 2px 4px;
+  width: 27px;
+  height: auto;
+  margin: 0px 0px 2px 4px;
 }
 
 .galleryViewTextHide {
@@ -63,7 +68,7 @@ body {
 }
 
 #gallery {
-  width:98vw;
+  width: 98vw;
 }
 
 #galleryBackground {
@@ -73,7 +78,7 @@ body {
   top: 0px;
   left: 0px;
   z-index: 10000;
-overflow:hidden;
+  overflow: hidden;
   background-color: rgba(0, 0, 0, 0.808);
 }
 
@@ -153,12 +158,13 @@ overflow:hidden;
 }
 
 /* || Header Styles || */
-.PPimageButtonContainer{
-  width:65vw;
+.PPimageButtonContainer {
+  width: 65vw;
 }
+
 .PPgalleryImages {
-  width:100%;
-  height:210px;
+  width: 100%;
+  height: 210px;
   object-fit: cover;
   margin: 20px 10px 20px 0px;
 }
@@ -214,8 +220,8 @@ p {
   line-height: 23px;
 }
 
-#processText{
-  width:65vw;
+#processText {
+  width: 65vw;
 }
 
 /* || Next Project Styles || */
@@ -301,8 +307,8 @@ p {
   }
 
   #nextProjectTitle {
-    margin-left:20px;
-    width:190px;
+    margin-left: 20px;
+    width: 190px;
   }
 
   #nextProjectTitle h4 {
@@ -328,6 +334,7 @@ p {
   #nextProject {
     max-height: 150px;
   }
+
   #NPwineLabelThumb {
     width: 25vw;
     height: 25vw;
@@ -366,8 +373,23 @@ p {
 
   /* || Header Alterations || */
   .PPgalleryImages {
+    width: 75vw;
+    max-width: 800px;
     height: 350px;
     max-height: 600px;
+  }
+
+
+  .PPgalleryOption {
+    position: absolute;
+    right: 0px;
+    width: 50px;
+    top:135px;
+  }
+
+  .PPimageButtonContainer{
+    width:75vw;
+    max-width:800px;
   }
 
   #firstGalleryButton {
@@ -378,10 +400,12 @@ p {
   h4 {
     margin: 20px 0px 25px 0px;
   }
+
   h2 {
     font-size: 50px;
-    margin-bottom:50px;
+    margin-bottom: 50px;
   }
+
   h4 {
     font-size: 30px;
   }
@@ -400,7 +424,7 @@ p {
   .involvmentList h3 {
     margin: 010px 0px 5px 0px;
     font-size: 25px;
-    margin:25px 0px 25px 0px;
+    margin: 25px 0px 25px 0px;
   }
 
   .involvmentList li {
@@ -409,24 +433,25 @@ p {
     line-height: 25px;
   }
 
-  .involvmentList{
-    padding-bottom:25px;
+  .involvmentList {
+    padding-bottom: 25px;
   }
 
   .pinkColorChange {
     color: #ea1f63;
   }
-  
+
 
   /* || Gallery Fix || */
-  #gallery{
-    max-width:98vw;
+  #gallery {
+    max-width: 98vw;
   }
- #galleryImageOverlay{
-    height:auto;
-    width:auto;
- }
-  
+
+  #galleryImageOverlay {
+    height: auto;
+    width: auto;
+  }
+
   #galleryText {
     background-color: black;
     width: 70vw;
@@ -436,19 +461,19 @@ p {
     margin-left: auto;
     margin-right: auto;
   }
-  
+
   #galleryText p {
     font-size: 17px;
-    line-height:30px;
+    line-height: 30px;
     padding: 20px;
     color: #ffffff;
   }
-  
+
   #galleryNavigation {
     margin: 0px auto 0 auto;
     width: 60vw;
   }
-  
+
   #galleryNavigation button p {
     width: 100%;
     font-size: 13px;
@@ -457,11 +482,12 @@ p {
     padding: 5px;
     border-radius: 25px;
   }
-  .PPgalleryOption{
-    margin-top:150px;
+
+  .PPgalleryOption {
+    margin-top: 150px;
   }
 
   #closeGallery {
-    margin:10px 150px 20px 0px;
+    margin: 10px 150px 20px 0px;
   }
 }
