--- a/projects/projectStyles.css
+++ b/projects/projectStyles.css
@@ -222,7 +222,7 @@ p {
 }
 
 #processText {
-  width: 65vw;
+  width:65vw;
 }
 
 /* || Next Project Styles || */
@@ -231,6 +231,7 @@ p {
   border-top: solid 1px #352a27;
   margin-top: 40px;
   padding: 50px 0px 0px 0px;
+  width:65vw;
 }
 
 #nextProjectFlexContainer {
@@ -244,15 +245,16 @@ p {
 }
 
 #nextProjectTitle h4 {
-  font-size: 13px;
+  font-size: 60%;
   line-height: 0px;
   margin: 0px;
 }
 
 #nextProjectTitle h2 {
-  font-size: 21px;
-  line-height: 0px;
-  margin-top: 20px;
+  font-size: 100%;
+  min-width:20px;
+  line-height: 15px;
+  margin-bottom:0px;
 }
 
 #NPwineLabelThumb {
@@ -263,9 +265,10 @@ p {
 
 #nextProjectTitle h3 {
   font-weight: 200;
-  font-size: 16px;
+  font-size: 70%;
   color: grey;
-  margin: 50px 0px 0px 0px;
+  margin: 25% 0px 0px 0px;
+  align-self: flex-end;
 }
 
 #PPnext:hover {
@@ -334,6 +337,9 @@ p {
 
   #nextProject {
     max-height: 150px;
+    width:100%;
+    margin-right:20px;
+    max-width:800px;
   }
 
   #NPwineLabelThumb {
